# mke

./: .gitignore  README.md  meson.build  mke.json
binding/: binding-util.cpp  bitmap-binding.cpp  cusl-binding.cpp  disposable-binding.h  etc-binding.cpp  font-binding.cpp  graphics-binding.cpp  http-binding.cpp  input-binding.cpp  meson.build  miniffi-binding.cpp  sprite-binding.cpp  tilemapvx-binding.cpp  viewport-binding.cpp  windowvx-binding.cpp
linux/: AppRun  Makefile  make_appimg.sh  meson.build  mke.desktop  vars.sh
macos/: Info.plist
macos/Dependencies/: dependencies.make
macos/config/: mke.Intel.xcconfig  mke.Universal.xcconfig  mke.xcconfig  steamshim.xcconfig
macos/mke.xcodeproj/: project.pbxproj
macos/mke.xcodeproj/xcshareddata/xcschemes/: Intel (Steam).xcscheme  Intel.xcscheme  Universal (Steam).xcscheme  Universal.xcscheme  shim.xcscheme
macos/views/: SettingsMenuController.h  SettingsMenuController.mm  TouchBar.h  TouchBar.mm  sdl_codes.h
src/: al-util.h  alstream.cpp  alstream.h  audio.h  audiostream.cpp  binding-audio.cpp  binding-bitmap.cpp  binding-clipboard.c  binding-disposable.h  binding-etc.cpp  binding-event.c  binding-filesystem.c  binding-filesystem.cpp  binding-flashable.h  binding-gamecontroller.c  binding-gl-1.0-1.1.c  binding-gl-1.2.c  binding-gl-1.3.c  binding-gl-1.4.c  binding-gl-1.5.c  binding-gl-2.0.c  binding-gl-2.1.c  binding-gl-3.0.c  binding-gl-enums.c  binding-gl-error.c  binding-gl-ext-3dfx.c  binding-gl-ext-arb.c  binding-gl-ext-ati.c  binding-gl-ext-ext.c  binding-gl-ext-gremedy.c  binding-gl-ext-nv.c  binding-gl.c  binding-gl_buffer.c  binding-glimpl.c  binding-hint.c  binding-http.cpp  binding-input.cpp  binding-joystick.c  binding-key.c  binding-messagebox.c  (+94 more)
src/audio/: aldatasource.h  audio.cpp  audiostream.h  fluid-fun.cpp  sdlsoundsource.cpp
src/crypto/: rgssad.cpp  rgssad.h
src/display/: bitmap.cpp  bitmap.h  graphics.h  plane.h  sprite.h  tilemap.h  tilemapvx.h  viewport.h  window.cpp  windowvx.cpp
src/display/gl/: gl-debug.cpp  gl-fun.cpp  gl-fun.h  gl-meta.h  gl-util.h  global-ibo.h  glstate.h  quad.h  quadarray.h  shader.cpp  texpool.h  tileatlas.h  tilequad.cpp  transform.h
src/etc/: etc-internal.h  etc.cpp  table.h
src/filesystem/: filesystem.cpp  filesystem.h  filesystemImpl.cpp  filesystemImpl.h  filesystemImplApple.mm
src/input/: input.cpp  input.h  keybindings.cpp  keybindings.h
src/net/: net.cpp
src/sdl_opengl/: common.h  extconf.h  fptr_struct.h  rubysdl2_internal.h
src/system/: system.h  systemImpl.cpp
src/util/: debugwriter.h  disposable.h  encoding.h  exception.h  intrulist.h  serializable.h
steamshim/: steamshim_mac_helpers.h  steamshim_parent.cpp
windows/: Makefile  meson.build  resource.rc  vars.sh
